paperless-ngx/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    name: paperless-ngx
  annotations:
    argocd.argoproj.io/sync-wave: "0"
