paperless-ngx/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-web
  namespace: paperless-ngx
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: paperless-web
