paperless-ngx/13-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
  namespace: paperless-ngx
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: paperless-redis
