paperless-ngx/14-gotenberg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  namespace: paperless-ngx
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: paperless-gotenberg
