paperless-ngx/15-tika-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
  namespace: paperless-ngx
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  ports:
    - port: 9998
      targetPort: 9998
      protocol: TCP
      name: http
  selector:
    app: paperless-tika
